<resources>
    <string name="app_name">Group Song Viewer</string>
    <string name="default_text">Default Text</string>
    <string name="song_structure_header_default">Song Structure:</string>
    <string name="verse_header_default">Verse:</string>
    <string name="chorus_header_default">Chorus:</string>
    <string name="left_button">&lt;</string>
    <string name="right_button">&gt;</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="first_line_margin">First Line Margin (pixels)</string>
    <string name="wrapped_line_margin">Wrapped Line Margin (pixels)</string>
    <string name="display_text_size">Content Text Size (sp)</string>
    <string name="first_line_margin_default">0</string>
    <string name="display_text_size_default">18</string>
    <string name="wrapped_line_margin_default">40</string>
    <string name="preference_screen_title">Preferences</string>
    <string name="sort_title_entry">Sort by Title</string>
    <string name="sort_title_value">0</string>
    <string name="sort_artist_entry">Sort by Artist</string>
    <string name="sort_artist_value">1</string>
    <string name="sort_preference">Sort Preference</string>
    <string name="external_song_file_location">External Song File Location</string>
    <string name="external_song_file_location_default">/</string>
    <string name="source_internal_entry">Default Songs</string>
    <string name="source_internal_value">source_internal</string>
    <string name="source_external_entry">Songs From External Location</string>
    <string name="source_external_value">source_external</string>
    <string name="source_both_entry">Both</string>
    <string name="source_both_value">source_both</string>
    <string name="source_preference">Song File Source</string>
</resources>