<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="@string/display_text_size_default"
        android:key="display_text_size"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/display_text_size"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true"
        tools:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/first_line_margin_default"
        android:key="first_line_margin"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/first_line_margin"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:defaultValue="@string/wrapped_line_margin_default"
        android:key="wrapped_line_margin"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/wrapped_line_margin"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />
    <Preference
        android:key="reset_preferences"
        android:title="Reset Preferences"
        app:iconSpaceReserved="false" />

</PreferenceScreen>